// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App / renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX fWzXiF"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    auditadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa bKocXA"
    >
      <div
        class="sc-bwzfXH jiphYj"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-hZSUBg XwgsZ"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-cMhqgX YJSjJ"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-fjdhpX bHlbRA"
            />
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-esOvli tkknN sc-kAzzGY bLtYsq"
                >
                  <div
                    class="bp3-input-group sc-chPdSV PhUsl"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <div
                    class="sc-iuJeZd ktwrIZ"
                  >
                    <label
                      for="auditMathType"
                    >
                      <p>
                        Ballot polling type
                      </p>
                      <div>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            checked=""
                            name="auditMathType"
                            type="radio"
                            value="BRAVO"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          BRAVO
                        </label>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            name="auditMathType"
                            type="radio"
                            value="MINERVA"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Minerva (Not recommended)
                        </label>
                      </div>
                    </label>
                  </div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="HYBRID"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Hybrid (SUITE - Ballot Comparison & Ballot Polling)
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-gZMcBi eZVGYn"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App / renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX fWzXiF"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    jurisdictionadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa bKocXA"
    >
      <div
        class="sc-bwzfXH jiphYj"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-hZSUBg XwgsZ"
          >
            <div>
              <h2>
                Jurisdictions - 
                audit one
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary"
                href="/election/1/jurisdiction/jurisdiction-id-1"
                style="justify-content: start; margin-bottom: 15px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction One
                </span>
              </button>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary"
                href="/election/1/jurisdiction/jurisdiction-id-3"
                style="justify-content: start; margin-bottom: 15px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Three
                </span>
              </button>
            </div>
            <div>
              <h2>
                Jurisdictions - 
                audit two
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary"
                href="/election/2/jurisdiction/jurisdiction-id-2"
                style="justify-content: start; margin-bottom: 15px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Two
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App / renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bsbRJL fyQZoL"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX fWzXiF"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    auditadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa bKocXA"
    >
      <div
        class="sc-bwzfXH jiphYj"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-hZSUBg XwgsZ"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-cMhqgX YJSjJ"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-fjdhpX bHlbRA"
            />
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-esOvli tkknN sc-kAzzGY bLtYsq"
                >
                  <div
                    class="bp3-input-group sc-chPdSV PhUsl"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <div
                    class="sc-iuJeZd ktwrIZ"
                  >
                    <label
                      for="auditMathType"
                    >
                      <p>
                        Ballot polling type
                      </p>
                      <div>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            checked=""
                            name="auditMathType"
                            type="radio"
                            value="BRAVO"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          BRAVO
                        </label>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            name="auditMathType"
                            type="radio"
                            value="MINERVA"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Minerva (Not recommended)
                        </label>
                      </div>
                    </label>
                  </div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="HYBRID"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Hybrid (SUITE - Ballot Comparison & Ballot Polling)
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-gZMcBi eZVGYn"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ab logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-left members-name"
        >
          <div
            class="bp3-navbar-heading"
          >
            Audit Board #2
            :
             
            <strong />
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX fWzXiF"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Audit Board #2
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa bKocXA"
    >
      <div
        class="sc-bwzfXH sc-iQNlJl fOSFNE"
      >
        <div>
          <h1
            class="bp3-heading"
          >
            Audit Board #2
            : Member Sign-in
          </h1>
          <p>
            Enter the information below for each member of 
            Jurisdiction 1
             
            Audit Board #2
             below, then click "Next" to proceed.
          </p>
          <form>
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <h5
                class="bp3-heading"
              >
                Audit Board Member
              </h5>
              <label
                class="sc-jwKygS jkxZBZ"
                for="[0]name"
              >
                Full Name
              </label>
              <input
                class="sc-btzYZH kxNAOT"
                id="[0]name"
                name="[0]name"
                value=""
              />
              <label
                class="sc-jwKygS jkxZBZ"
                for="[0]affiliation"
              >
                Party Affiliation 
                <i>
                  (optional)
                </i>
              </label>
              <div>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[0]affiliation"
                    type="radio"
                    value="DEM"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Democrat
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[0]affiliation"
                    type="radio"
                    value="REP"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Republican
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[0]affiliation"
                    type="radio"
                    value="LIB"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Libertarian
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[0]affiliation"
                    type="radio"
                    value="IND"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Independent/Unaffiliated
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[0]affiliation"
                    type="radio"
                    value="OTH"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Other
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    checked=""
                    name="[0]affiliation"
                    type="radio"
                    value=""
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  None
                </label>
              </div>
            </div>
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <h5
                class="bp3-heading"
              >
                Audit Board Member
              </h5>
              <label
                class="sc-jwKygS jkxZBZ"
                for="[1]name"
              >
                Full Name
              </label>
              <input
                class="sc-btzYZH kxNAOT"
                id="[1]name"
                name="[1]name"
                value=""
              />
              <label
                class="sc-jwKygS jkxZBZ"
                for="[1]affiliation"
              >
                Party Affiliation 
                <i>
                  (optional)
                </i>
              </label>
              <div>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[1]affiliation"
                    type="radio"
                    value="DEM"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Democrat
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[1]affiliation"
                    type="radio"
                    value="REP"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Republican
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[1]affiliation"
                    type="radio"
                    value="LIB"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Libertarian
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[1]affiliation"
                    type="radio"
                    value="IND"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Independent/Unaffiliated
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="[1]affiliation"
                    type="radio"
                    value="OTH"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Other
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    checked=""
                    name="[1]affiliation"
                    type="radio"
                    value=""
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  None
                </label>
              </div>
            </div>
            <button
              class="bp3-button bp3-disabled bp3-intent-primary sc-gZMcBi eZVGYn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Next
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX fWzXiF"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    jurisdictionadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa bKocXA"
    >
      <div
        class="sc-bwzfXH jiphYj"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-hZSUBg XwgsZ"
          >
            <div>
              <h2>
                Jurisdictions - 
                audit one
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary"
                href="/election/1/jurisdiction/jurisdiction-id-1"
                style="justify-content: start; margin-bottom: 15px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction One
                </span>
              </button>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary"
                href="/election/1/jurisdiction/jurisdiction-id-3"
                style="justify-content: start; margin-bottom: 15px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Three
                </span>
              </button>
            </div>
            <div>
              <h2>
                Jurisdictions - 
                audit two
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary"
                href="/election/2/jurisdiction/jurisdiction-id-2"
                style="justify-content: start; margin-bottom: 15px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Two
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bsbRJL fyQZoL"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX fWzXiF"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    auditadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa bKocXA"
    >
      <div
        class="sc-bwzfXH jiphYj"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-hZSUBg XwgsZ"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-cMhqgX YJSjJ"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-fjdhpX bHlbRA"
            />
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-esOvli tkknN sc-kAzzGY bLtYsq"
                >
                  <div
                    class="bp3-input-group sc-chPdSV PhUsl"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <div
                    class="sc-iuJeZd ktwrIZ"
                  >
                    <label
                      for="auditMathType"
                    >
                      <p>
                        Ballot polling type
                      </p>
                      <div>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            checked=""
                            name="auditMathType"
                            type="radio"
                            value="BRAVO"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          BRAVO
                        </label>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            name="auditMathType"
                            type="radio"
                            value="MINERVA"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Minerva (Not recommended)
                        </label>
                      </div>
                    </label>
                  </div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="HYBRID"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Hybrid (SUITE - Ballot Comparison & Ballot Polling)
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-gZMcBi eZVGYn"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-heading"
          >
            Jurisdiction: 
            Jurisdiction One
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX fWzXiF"
          >
            <div
              class="bp3-popover-wrapper bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-user"
                    icon="user"
                  >
                    <svg
                      data-icon="user"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        user
                      </desc>
                      <path
                        d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    jurisdictionadmin@email.org
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa bKocXA"
    >
      <div
        class="bp3-callout sc-cMljjf IXxXU"
      >
        <div
          class="sc-bwzfXH jiphYj"
        >
          <div
            class="text"
          >
            <h3
              class="bp3-heading sc-brqgnP bTyIdG"
            >
              Test Audit
            </h3>
            <h4
              class="bp3-heading"
            >
              The audit has not started.
            </h4>
            <p>
              0/2 files successfully uploaded.
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bwzfXH sc-kgAjT eWUQgE"
      >
        <h2
          class="bp3-heading sc-bZQynM eVSWVp"
        >
          Audit Source Data
        </h2>
        <form>
          <div
            class="sc-gqjmRU bpifYU"
          >
            <h2
              class="bp3-heading sc-bZQynM eVSWVp"
            />
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <h4
                class="bp3-heading"
              >
                Ballot Manifest
              </h4>
              <div
                class="sc-jzJRlG lkbpuy"
              >
                Click "Browse" to choose the appropriate Ballot
                Manifest file from your computer. This file should be a
                comma-separated list of all the ballot boxes/containers used
                to store ballots for this particular election, plus a count of
                how many ballot cards (individual pieces of paper) are stored
                in each container.
                <br />
                <br />
                <a
                  href="/sample_ballot_manifest.csv"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  (Click here to view a sample file in the correct format.)
                </a>
              </div>
            </div>
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                class="bp3-file-input"
              >
                <input
                  accept=".csv"
                  name="csv"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a CSV...
                </span>
              </label>
            </div>
            <div>
              <button
                class="bp3-button bp3-intent-primary sc-gZMcBi eZVGYn"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Upload File
                </span>
              </button>
            </div>
          </div>
        </form>
        <form>
          <div
            class="sc-gqjmRU bpifYU"
          >
            <h2
              class="bp3-heading sc-bZQynM eVSWVp"
            />
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <h4
                class="bp3-heading"
              >
                Candidate Totals by Batch
              </h4>
              <div
                class="sc-jzJRlG lkbpuy"
              >
                Click "Browse" to choose the appropriate Candidate Totals by Batch file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many votes were counted for each candidate in each of those containers.
                <br />
                <br />
                <a
                  href="/sample_candidate_totals_by_batch.csv"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  (Click here to view a sample file in the correct format.)
                </a>
              </div>
            </div>
            <div
              class="sc-fjdhpX bHlbRA"
            >
              <label
                class="bp3-file-input bp3-disabled"
              >
                <input
                  accept=".csv"
                  disabled=""
                  name="csv"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a CSV...
                </span>
              </label>
            </div>
            <div>
              <button
                class="bp3-button bp3-disabled bp3-intent-primary sc-gZMcBi eZVGYn"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Upload File
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-gqPbQI hwbsHU"
  >
    <div
      class="bp3-navbar sc-bxivhb gvSyoM"
    >
      <div
        class="sc-bwzfXH sc-EHOje GDJyz"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                class="logo-desktop"
                src="/arlo.png"
              />
              <img
                alt="Arlo, by VotingWorks"
                class="logo-mobile"
                src="/arlo-mobile.png"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-bsbRJL fyQZoL"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
